PyKeylogger Changelog
---------------------

-----
Version 0.7.0 (2006-07-19)

*) Fixed bug where error output was not properly translated to string (cf. http://sourceforge.net/forum/forum.php?thread_id=1418377&forum_id=493189)
*) Refactored code so that the set of loggable characters only gets set up once.
*) Make autoflush also flush the systemlog if it exists.
*) New feature: Make pykeylogger read the configuration from a .ini file, rather than from commandline options. This really simplifies running pykeylogger, especially where starting it with the system boot is desired. This also makes pykeylogger more easily expandable with new features.
*) New feature: automatically zip up the logfiles and send the zip by email periodically (configurable through the .ini file)
*) New Feature: automatically delete logfiles older than X days (configurable through the .ini file)

-----
Version 0.6.7 (2005-11-25)

*) Fixed bug where keylogger would not properly exit due to the running timer thread. 
*) Fixed bug in timer module where timer would not terminate even after its task is completed.

-----
Version 0.6.6 (2005-11-23)

*) As per user suggestion, implemented an automatic write buffer flush at user-definable interval. 
*) Changed range of loggable characters to include extended ASCII. Hopefully that will help international users. Please report your feedback.

-----
Version 0.6.5 (2005-10-12)

*) Fixed bug 1323518, where program would not log properly to one file with option '-o'. It's great when a bugfix involves changing just one line of code. :)

-----
Version 0.6.4 (2005-10-03)

*) Really fixed the long filename bug now (it turns out the fix from 0.6.0 didn't really work...)
*) Fix up handling of various exceptions that could be thrown as a result of various filesystem operations. Should make pykeylogger play nicer.
*) Include cumulative changelog (this file) in release packages.